[package]
name = "language-server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.18"
tower-lsp = "0.20.0" 

[[bin]]
name = "client"
path = "./src/client.rs" # change this as get around to changing the name of the files to be more expressive

[[bin]]
name = "server"
path = "./src/server.rs" # as above, change this when coming around to change name of files
