[package]
name = "language-server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.20"
tower-lsp = "0.20.0" 
env_logger = "0.11.5"
log = "0.4.20"
