[package]
name = "tree-morph"
version = "0.1.0"
edition = "2024"

[dependencies]
multipeek = "0.1.2"
rand = "0.9.2"
uniplate = "0.4.2"


[lints]
workspace = true

[dev-dependencies]
criterion = '0.7'

[[bench]]
name = "left_add"
harness = false

[[bench]]
name = "right_add"
harness = false


[[bench]]
name = "left_add_hard"
harness = false

[[bench]]
name = "factorial"
harness = false

[[bench]]
name = "identity"
harness = false

[[bench]]
name = "modify_leafs"
harness = false
