[package]
name = "tree-morph"
version = "0.1.0"
edition = "2024"

[dependencies]
multipeek = "0.1.2"
rand = "0.10.0"
rayon = "1.10"
uniplate = "0.4.4"
tracing = "0.1"
tree-morph-macros = { path = "../tree-morph-macros" }
paste = { workspace = true }
fxhash = "0.2.1"


[lints]
workspace = true

[dev-dependencies]
criterion = "0.8"
tracing-subscriber = { workspace = true }

[[bench]]
name = "left_add"
harness = false

[[bench]]
name = "right_add"
harness = false


[[bench]]
name = "left_add_hard"
harness = false

[[bench]]
name = "factorial"
harness = false

[[bench]]
name = "identity"
harness = false

[[bench]]
name = "modify_leafs"
harness = false

[[bench]]
name = "bench_cache_best"
harness = false

[[bench]]
name = "bench_cache_worst"
harness = false

[[bench]]
name = "bench_inccache_best"
harness = false

[[bench]]
name = "bench_inccache_worst"
harness = false

[[bench]]
name = "bench_levels_best"
harness = false

[[bench]]
name = "bench_levels_worst"
harness = false

[[bench]]
name = "bench_prefilter_best"
harness = false

[[bench]]
name = "bench_prefilter_worst"
harness = false
