[package]
name = "tree-sitter-essence"
version = "0.1.0"
edition = "2021"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"
tree-sitter-generate = "0.24.7"

[build-dependencies]
cc = "1.2.27"
tree-sitter-cli = "0.24.7"
tree-sitter-generate = "0.24.7"

[dev-dependencies]
tree-sitter = "0.24.7"
